rpc-account/deploy/chart/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: account
  labels:
    app: account
spec:
  replicas: 3
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      imagePullSecrets:
        - name: hatlonely-pull-secrets
      containers:
        - name: account
          image: registry.cn-beijing.aliyuncs.com/hatlonely/go-rpc-account:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: go-rpc-account-config
              mountPath: /var/docker/go-rpc-account/config
      volumes:
        - name: go-rpc-account-config
          projected:
            sources:
            - configMap:
                name: go-rpc-account
                items:
                  - key: account.json
                    path: account.json
