rpc-account/deploy/chart/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: account
spec:
  clusterIP: None
  selector:
    app: account
  ports:
    - port: 80
      targetPort: 80
