rpc-account/deploy/chart/template/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  name: account
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: k8s.account.hatlonely.com
      http:
        paths:
          - path:  /
            backend:
              serviceName: account
              servicePort: 80
  tls:
    - hosts:
        - k8s.account.hatlonely.com
      secretName: k8s-secret
